DigicielFull/force-app/main/default/objects/CCMI__Milestone_Sub_Task__c/CCMI__Milestone_Sub_Task__c.object-meta.xml
<CustomObject>
    <description>Used for capturing the sub tasks that form part of the tasks in the Cloud Coach Fundamentals app (Formerly Cloud Coach Milestones)</description>
    <label>Project Sub Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Sub Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>