DigicielFull/force-app/main/default/objects/CCMI__Milestone_Sub_Task__c/fields/CCMI__IsComplete__c.field-meta.xml
<CustomField>
    <fullName>CCMI__IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>