DigicielFull/force-app/main/default/objects/CCMI__Milestone_Sub_Task__c/fields/CCMI__Milestone_Task__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Milestone_Task__c</fullName>
    <description>Detail record to a Milestone Task record</description>
    <inlineHelpText>The milestone task that this sub task is related to</inlineHelpText>
    <label>Task</label>
    <referenceTo>CCMI__Milestone_Task__c</referenceTo>
    <relationshipLabel>Sub Tasks</relationshipLabel>
    <relationshipName>Milestone_Sub_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>