DigicielFull/force-app/main/default/objects/CCMI__Milestone_Sub_Task__c/fields/CCMI__Parent_Complete__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Parent_Complete__c</fullName>
    <formula>ISPICKVAL(CCMI__Milestone_Task__r.CCMI__Status__c, &apos;Completed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Is Complete</label>
    <type>Checkbox</type>
</CustomField>