DigicielFull/force-app/main/default/objects/CCMI__Milestone_Sub_Task__c/fields/CCMI__Position__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Position__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>